fixed dark mode error

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ body{
   min-height: 100vh;
   background-image: linear-gradient(#737DFE, #FFCAC9);
 }
+.main-content{
+  display: flex;
+  align-items: center;
+}
 h1{
   margin-top: 40px;
   font-weight: bold;
@@ -24,7 +28,7 @@ button{
   margin-top: 15px;
 }
 
-body.active{
+.darkmode{
   background-image: linear-gradient(#233A4E, #9c6DB0);
 }
 
